<resources>
    <string name="app_name">HEMOGUIN_App</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_menu">HEMOGUIN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HEMOGUIN</string>
    <string name="nav_header_subtitle">Bienvenido</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">INICIO</string>
    <string name="menu_guia">GUÍA NUTRICIÓN</string>
    <string name="menu_recetario">RECETARIO</string>
    <string name="menu_tips">ALIMENTOS ALTOS EN</string>
    <string name="menu_piramide">PIRÁMIDE NEFRALIA</string>
    <string name="menu_caras_piramide"> CARAS DE LA PIRÁMIDE NEFRALIA</string>
    <string name="caras_piramide">PIRÁMIDE DE ALIMENTACIÓN SALUDABLE</string>
    <string name="menu_tablas">TABLAS DE APOYO</string>
    <string name="menu_extras">EXTRAS</string>
    <string name="menu_articulo">ARTÍCULO MENSUAL</string>
    <string name="menu_piramide_neftalina">PIRÁMIDE NEFRALIA</string>
    <string name="aceites_grasas">ACEITES Y GRASAS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recetario_LcA">Lentejas guisadas con arroz</string>
    <string name="ingredientes_LcA">¼ Tza. Lentejas doble cocción, 2 cdas Aceite de oliva \n
                                    ¼ Tza. Cebolla, 1 Diente de ajo\n
                                    ½ pza. Papa doble cocción\n
                                    1 Pza. Tomate pelado, ½ Tza. Zanahoria doble cocción\n
                                    ¼ Tza. Arroz y 100ml. Agua.
    </string>
    <string name="preparacion_LcA">Tener las lentejas y las verduras en remojo previamente unas 24 horas cambiándoles el agua.
                                    En una cazuela poner las papas y la zanahoria, y en otra las lentejas y realizarles la doble cocción.
                                    Realizar un sofrito con el ajo y la cebolla picada previamente sometida a remojo.
                                    Agregar un tomate entero, molido y sin cascara.
                                    Añadirle este sofrito a las lentejas previamente quitado el caldo de cocción y añadido un poco de agua junto con la papa y la zanahoria cocidas.
                                    Dejar que se hagan un poco más e incorporar el arroz cocido.

    </string>
    <string name="recetario_EdA">Ensalada de arroz</string>
    <string name="ingredientes_EdA">¼ Tza. Arroz\n
                                    1 Pza. Zanahoria remojo \n
                                    2 cdas. Chícharos \n
                                    2 cdas. Maíz en grano hervido\n
                                    2 cdas. soperas Aceite oliva \n
                                    1 cda. Vinagre\n
                                    ½ Tza. Agua
                                    ½ Pza. Pimiento rojo remojo. \n

    </string>
    <string name="preparacion_EdA">Poner en un recipiente una base a modo de nido arroz cocido con una hoja de laurel.
        Incorporar la zanahoria, el chícharo, el maíz en grano y el pimiento picado previamente sometidos a remojo y cocidos,
        mezclar con el arroz. Finalmente añadir una cucharada de aceite, una de vinagre y pimienta.
    </string>
    <string name="recetario_CdA">Croquetas de Atún</string>
    <string name="ingredientes_CdA">1 Pza. Papa doble cocción en puré,\n
                                    1 Tza. Atún en agua drenado,\n
                                    ½ Tza. Pan molido, 1 Pza. Huevo, \n
                                    ¼ Tza. Harina de trigo,\n
                                    1 pizca Pimienta blanca, \n
                                    6 cdas. Aceite, \n
                                    1 cda. Perejil picado.

    </string>
    <string name="preparacion_CdA">Mezclar el puré de papa, el atún, el perejil, el huevo y la harina.
        Incorpora todo con pimienta. Agregar poco a poco el pan molido. Añadir aceite y formar las croquetas,
        empanizarlas y refrigerar por 30 min. para después freírlas. Ponerlas en un papel absorbente para quitar el máximo de aceite.

    </string>
    <string name="recetario_FdP">Filete de pescado a la Plancha</string>
    <string name="ingredientes_FdP">1 Filete de Pescado,\n
                                    Especias al gusto (Pimienta negra y cilantro), \n
                                    3 cdas. Zumo de Limón natural,  \n
                                    3 cdas. Aceite de oliva.
    </string>
    <string name="preparacion_FdP">Se prepara el filete de pescado con las especias al gusto (pimienta negra y cilantro),
        se coloca a la plancha con un poco de aceite durante 4 minutos a cada lado.\n
Una vez hecho se rocía con un poco de zumo de limón y se sirve. Acompáñelo con arroz y ensalada.

    </string>
    <string name="recetario_PdP">Puré de papa</string>
    <string name="ingredientes_PdP">1pza. Papa doble cocción,\n
                                    ¼ tza. Cebolla doble cocción, 2 cdas. Aceite de oliva,\n
                                    ¼ tza. Leche  entera, Especias al gusto (pimienta y nuez moscada),\n
                                    ¼ tza. Zanahoria doble cocción.

    </string>
    <string name="preparacion_PdP">Pelar la papa y la zanahoria una noche antes de prepararlas y cortarlas en trozos,
        dejarlas en agua cambiándosela de vez en cuando. Añadir la papa, la zanahoria y la cebolla en agua hirviendo,
        al estar blandas las verduras retirar el agua. Estando las verduras blandas y secas comience a triturarlas.
        Se le agrega un poco de leche, el aceite de oliva y las especias al gusto (pimienta, nuez moscada) y se trituran
        hasta formar el puré.

    </string>
    <string name="recetario_PaH">Pollo al horno</string>
    <string name="ingredientes_PaH">250 gr. Pollo entero,\n
                                    ½ pza. Cebolla remojo,\n
                                    4 cdas. Aceite oliva,\n
                                    4 cdas. Vino blanco, \n
                                    Pimienta al gusto

    </string>
    <string name="preparacion_PaH">Cortar la cebolla en láminas y someterlas a remojo.
        Escurrir muy bien y colocar en la fuente del horno. Colocar los muslos sobre la cama de cebolla, con la piel hacia arriba y pimentados.
        Añadir un poco de vino blanco, no más de un cuarto de un vaso pequeño.
        Introducir en el horno precalentado. A la media hora, o cuando la piel se haya dorado, se da la vuelta a los cuartos de pollo para que se asen por el otro lado.

    </string>
    <string name="recetario_FdR">Filete de res al vino</string>
    <string name="ingredientes_FdR">1 Filete de res, \n
                                    1 diente de ajo,\n
                                    ½ pza. cebolla remojo,\n
                                    1 pizca Pimienta blanca, \n
                                    1 pizca Pimienta negra, \n
                                    6 cdas. Vino blanco, \n
                                    2 cdas. Aceite oliva, \n
                                    ¼ Tza. Agua

    </string>
    <string name="preparacion_FdR">Los filetes se pueden cortar en tiras. Previamente se echa la pimienta negra y blanca al gusto
        por ambos lados de los filetes y se dejan reposar 10 min. En una sartén se agrega el aceite de oliva y se sofríe el
        ajo y la cebolla sometida previamente a remojo. Se añaden las tiras de carne y se dora. Por último agregamos vino y
        se tapa la sartén 10 min. Moviéndolos para evitar que se quemen, en el caso de que se quede sin caldo antes de tiempo se
        le incorpora otro poco de agua.

    </string>
    <string name="recetario_CaA">Champiñones al ajo</string>
    <string name="ingredientes_CaA">½ Tza. Champiñones fileteados,\n
                                    1 diente de ajo,   \n
                                    1 cda. Aceite de oliva,\n
                                    1 pizca de pimienta blanca, \n
                                    1 pizca de pimienta negra .


    </string>
    <string name="preparacion_CaA">Sofreír el ajo en el aceite. Antes de que llegue a quemarse poner los champiñones
        bien escurridos, enjuagados y revolver de vez en cuando hasta que cojan ese punto tostado.
        Añadir la pimienta blanca y negra y remover muy bien.

    </string>
    <string name="recetario_HcC">Huevo revuelto con champiñones</string>
    <string name="ingredientes_HcC">1 Pza. Huevo, \n
                                    1 Pza. Clara de huevo, \n
                                    ½ Tza. Champiñones fileteados, \n
                                    2 cdas. de aceite de oliva,\n
                                    1 diente de ajo, \n
                                    ½ pza. Chile serrano picado,\n
                                    ½ cda. Vinagre.

    </string>
    <string name="boton1">CUIDADOS DEL ACCESO VASCULAR (CARÁCTER/FÍSTULA)</string>
    <string name="boton2">SIGNOS DE ALARMA</string>
    <string name="boton3">CUIDADO PERSONAL</string>
    <string name="boton4">¿CÓMO BAÑARME?</string>
    <string name="boton5">HIGIENE PERSONAL</string>
    <string name="boton6">RECOMENDACIONES GENERALES</string>
    <string name="como_banarse">¿CÓMO DEBO DE BAÑARME?</string>
    <string name="como_banarse_parrafo1">
        Al momento de bañarse deberá cuidar su catéter, es decir evitar que se moje y que el chorro del agua caiga directamente en él.
    </string>
    <string name="como_banarse_parrafo2">
       Para lograr un baño sin riesgos realice los siguientes pasos:
    </string>
    <string name="como_banarse_parrafo3">
       1.- Cubra su catéter  completamente con una bolsa de plástico y péguela con tela adhesiva o microporo.
    </string>
    <string name="como_banarse_parrafo4">
       2.- Sobre la bolsa coloque una toalla chica utilizando nuevamente microporo o tela adhesiva para fijarla.
    </string>
    <string name="como_banarse_parrafo5">
       3.- Finalmente cubra la toalla con otra bolsa de plástico y séllela lo mejor posible con tela adhesiva o microporo.
    </string>
    <string name="como_banarse_parrafo6">
       4.- Evite que el chorro del agua caiga directamente sobre la zona del catéter.
    </string>
    <string name="higiene_personal">HIGIENE PERSONAL</string>
    <string name="higiene_personal_parrafo01">
        1.- Es recomendable el baño diario.
    </string>
    <string name="higiene_personal_parrafo02">
        2.- Cuide su higiene bucal, realice una limpieza con un cepillo suave y pasta de dientes después de cada comida.
    </string>
    <string name="higiene_personal_parrafo03">
        3.- Cuide sus pies, especialmente en pacientes con diabetes es importante cuidar su calzado, procure calzado cómodo que no canse, ni moleste y especialmente no roce, para evitar ampollas u otras  lesiones.
    </string>
    <string name="higiene_personal_parrafo04">
       4.- Es importante que antes de iniciar su sesión de hemodiálisis y en caso de tener fístula realice un lavado de su brazo, así como el lavado de ambas manos.
    </string>
    <string name="higiene_personal_parrafo05">
       5.- Procure tener habitualmente su uñas cortas, siendo cuidadoso de no hacer lesiones en sus dedos al momento de cortarlas.
    </string>
    <string name="higiene_personal_parrafo06">
      6.- Utilice ropa holgada, lávela y cámbiela diariamente para evitar posibles infecciones por sangre y sudor.
    </string>
    <string name="higiene_personal_parrafo07">
      7.- Cuide su piel mediante el uso de jabón neutro y cremas hidratantes libres de petróleo.
    </string>
    <string name="higiene_personal_parrafo08">
      8.- Evite el uso de perfumes y colonias que resequen la piel.
    </string>
</resources>