<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="@color/fondo2"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo"
        tools:context=".ui.extras.Extra_higiene_personal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/higiene_personal"/>
        </LinearLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/fondo2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/higiene_personal" />
        </LinearLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/fondo2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/higiene_personal_parrafo01"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/higiene_personal_parrafo02"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/higiene_personal_parrafo03"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:justificationMode="inter_word"
                android:gravity="left"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/higiene_personal_parrafo04"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/higiene_personal_parrafo05"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:textSize="16dp"
                android:gravity="left"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/higiene_personal_parrafo06"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:justificationMode="inter_word"
                android:gravity="left"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/higiene_personal_parrafo07"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/higiene_personal_parrafo08"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>