<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:background="@color/fondo2"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo"
        tools:context=".ui.extras.Extra_como_banarse"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:justificationMode="inter_word"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/como_banarse"/>
        </LinearLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/fondo2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:justificationMode="inter_word"
                android:gravity="left"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/como_banarse_parrafo1"/>
        </LinearLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/fondo2" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/como_banarse" />
        </LinearLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/fondo2" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:justificationMode="inter_word"
                android:gravity="left"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/como_banarse_parrafo2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:justificationMode="inter_word"
                android:gravity="left"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/como_banarse_parrafo3"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:justificationMode="inter_word"
                android:gravity="left"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/como_banarse_parrafo4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="360dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dp"
                android:justificationMode="inter_word"
                android:gravity="left"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/fondo"
                android:text="@string/como_banarse_parrafo5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="152dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fondo"
                android:justificationMode="inter_word"
                android:gravity="left"
                android:text="@string/como_banarse_parrafo6"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>